--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "PDFToSpeech",
+  "name": "DocumentToSpeech",
   "version": "1.0.0",
   "description": "This app determines text in pdf and converting female sound",
   "main": "app.js",
@@ -10,16 +10,19 @@
     "package-linux": "electron-packager . --overwrite --asar=true --platform=linux --arch=x64 --icon=assets/icons/mac/icon.icns --prune=true --out=release-builds"
   },
   "repository": "https://github.com/electron/electron-quick-start",
-  "author": "Relakith",
+  "author": "Emirkan Acar",
   "license": "CC0-1.0",
   "devDependencies": {
-    "electron": "^6.0.10"
+    "electron": "^6.0.11"
   },
   "dependencies": {
+    "cp-file": "^7.0.0",
     "detect-file-type": "^0.2.7",
     "electromon": "^1.0.10",
     "electron-packager": "^14.0.6",
     "jquery": "^3.4.1",
+    "mammoth": "^1.4.8",
+    "mv": "^2.1.1",
     "node-gtts": "^2.0.2",
     "pdf-to-text": "0.0.7",
     "pdf2json": "^1.1.8",
